k8s/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test
  labels:
    app: deploy-test
    env: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-test
  template:
    metadata:
      labels:
        app: deploy-test
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: deploy-test
          imagePullPolicy: Always
          image: tpleugenerebong/deploy-test:development
          ports:
            - containerPort: 80
