k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-test
  namespace: deploy-test
spec:
  selector:
    app: deploy-test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
